--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
 </head>
 <body>
-<h1 styel= "color: blue; align: center ; font-size:40px; font-family: Papyrus, fantasy;"> Welcome to the official website of NAU ACM</h1>
-<p style="color:Gold;margin-left:20px;font-size:20px;font-family: "Brush Script MT", cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
+<h1 style= "color: blue; align:center ; font-size:40px; font-family: Papyrus, fantasy;"> NAU ACM chapter</h1>
+<p style="color:Gold;align:center;font-size:20px;font-family: "Brush Script MT", cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
  </p>
 <div align= "center">
 <iframe width="500px" height="300px" src="//www.youtube.com/embed/48mBTKyLXHE" frameborder="3" allowfullscreen></iframe>
