--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-// Under construction :)
 
 <!DOCTYPE html>
 <html>
@@ -7,10 +6,15 @@
   <title>NAU ACM</title>
   
 </head>
-<body>
-<center><h1 style= "color: blue;font-size:40px; font-family: Papyrus, fantasy;"> NAU ACM chapter</h1></center>
-<center><p style="color:DeepSkyBlue;;font-size:20px;font-family: Brush Script MT, cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
+<body>{
+    background-image: url("img_tree.png");
+    background-repeat: no-repeat;
+}
+<center><h1 style= "color: blue;font-size:50px; font-family: Papyrus, fantasy;"> NAU ACM chapter</h1></center>
+<center><p style="color:Gold;font-size:35px;font-family: Brush Script MT, cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
  </p></center>
+ 
+ 
 <div align= "center">
 <iframe width="500px" height="300px" src="//www.youtube.com/embed/48mBTKyLXHE" frameborder="3" allowfullscreen></iframe>
 </div>
