--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   
 </head>
 <body>{
-    background-image: url("img_tree.png");
-    background-repeat: no-repeat;
+    background-color: grey
 }
 <center><h1 style= "color: blue;font-size:50px; font-family: Papyrus, fantasy;"> NAU ACM chapter</h1></center>
 <center><p style="color:Gold;font-size:35px;font-family: Brush Script MT, cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
  </p></center>
+
+ <img border="0" src="/images/logo.gif" alt="logo" width="304" height="228" align = "center">
  
  
 <div align= "center">
 <iframe width="500px" height="300px" src="//www.youtube.com/embed/48mBTKyLXHE" frameborder="3" allowfullscreen></iframe>
 </div>
+
+<p><b>This website is under construction... </b></p>
 </body>
 </html>
