--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 </head>
 <body>{
-background-image: url(image/campus.gif);
+background-image: url('image/campus.gif');
 
 -moz-background-size: cover;
 -webkit-background-size: cover;
