--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>NAU ACM</title>
-  
-</head>
-<body>{
+  <style>
+    body{
 background-image: url('image/campus.gif');
 
 -moz-background-size: cover;
@@ -16,7 +15,12 @@ background-position: top center;
 background-repeat: no-repeat;
 background-attachment: fixed;
 
-}
+
+    }
+  </style>
+  
+</head>
+<body>
     
 <center><h1 style= "color: blue;font-size:50px; font-family: Papyrus, fantasy;"> NAU ACM chapter</h1></center>
 <center><p style="color:Gold;font-size:35px;font-family: Brush Script MT, cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
