folder name correction

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NAU ACM</title>
   <style>
     body{
-background-image: url('image/campus.gif');
+background-image: url('images/campus.gif');
 
 -moz-background-size: cover;
 -webkit-background-size: cover;
