--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
   <title>NAU ACM</title>
   <style>
     body{
-background-image: url('images/campus.gif');
+ackground: url(images/campus.gif) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
--moz-background-size: cover;
--webkit-background-size: cover;
-background-size: cover;
-background-position: top center;
-background-repeat: no-repeat;
-background-attachment: fixed;
-
-
+      
     }
   </style>
   
@@ -26,11 +23,11 @@ background-attachment: fixed;
 <center><p style="color:Gold;font-size:35px;font-family: Brush Script MT, cursive;" >Under the name of our NAU ACM chapter we support the professional growth of its members by providing opportunities for lifelong learning, career development, and professional networking and above all we are determined to feed each other  with bitter honey, feedback.
  </p></center>
 
- <img border="0" src="/images/logo.gif" alt="logo" width="304" height="228" align = "center">
+ <img border="0" src="/images/logo.gif" alt="logo" width="304" height="228" align = "left">
  
  
 <div align= "center">
-<iframe width="500px" height="300px" src="//www.youtube.com/embed/48mBTKyLXHE" frameborder="3" allowfullscreen></iframe>
+<iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe>
 </div>
 </body>
 </html>
