--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ ackground: url(images/campus.gif) no-repeat center center fixed;
  </p></center>
 
  <img border="0" src="/images/logo.gif" alt="logo" width="304" height="228" align = "left">
+ <h>Enjoy listening to "Storm" by Yanni while this website is under construction...</h>
  
  
 <div align= "center">
