--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NAU ACM</title>
   <style>
     body{
-ackground: url(images/campus.gif) no-repeat center center fixed; 
+background: url(images/campus.gif) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -28,8 +28,8 @@ ackground: url(images/campus.gif) no-repeat center center fixed;
  
 <div align= "center">
 <iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe>
-<h>Enjoy listening to "Storm" by Yanni while this website is under construction...</h>
 </div>
+<h><i></b>Enjoy listening to "Storm" by Yanni while this website is under construction...</i></h>
 
  
 </body>
