--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NAU ACM</title>
   <style>
     body{
-background: url(images/campus.gif) no-repeat center center fixed; 
+background: url('images/campus.gif') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -29,7 +29,7 @@ background: url(images/campus.gif) no-repeat center center fixed;
 <div align= "center">
 <iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe>
 </div>
-<h><i></b>Enjoy listening to "Storm" by Yanni while this website is under construction...</i></h>
+<h><i><center><b>Enjoy listening to "Storm" by Yanni while this website is under construction...</b></center></i></h>
 
  
 </body>
