--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ background: url('images/campus.gif') no-repeat center center fixed;
  
  
 <div align= "center">
-<iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe>
+<center><iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe></center>
 </div>
 <h><i><center><b>Enjoy listening to "Storm" by Yanni while this website is under construction...</b></center></i></h>
 
