--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@ background: url('images/campus.gif') no-repeat center center fixed;
  
  
 <div align= "center">
-<center><iframe width="500px" height="300px" src="//www.youtube.com/embed/7Ez-E8sPbU4" frameborder="3" allowfullscreen></iframe></center>
+<center><iframe width="500px" height="300px" src="//www.youtube.com/embed/BHIbT0e7LTc" frameborder="3" allowfullscreen></iframe></center>
 </div>
-<h><i><center><b>Enjoy listening to "Storm" by Yanni while this website is under construction...</b></center></i></h>
+
+<img border="0" src="http://www.banner-sales.com/Under%20Construction/comingsoon.png" alt="Under construction" width="304" height="228">
+<h><i><center><b>We're under construction...</b></center></i></h><image src= "http://www.banner-sales.com/Under%20Construction/comingsoon.png"></image>
 
  
 </body>
