--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ background: url('images/campus.gif') no-repeat center center fixed;
 <center><iframe width="500px" height="300px" src="//www.youtube.com/embed/BHIbT0e7LTc" frameborder="3" allowfullscreen></iframe></center>
 </div>
 
-<img border="0" src="http://www.banner-sales.com/Under%20Construction/comingsoon.png" alt="Under construction" width="304" height="228">
-<h><i><center><b>We're under construction...</b></center></i></h><image src= "http://www.banner-sales.com/Under%20Construction/comingsoon.png"></image>
+<h><i><center><b>We're under construction...</b></center></i></h><center><image src= "http://www.banner-sales.com/Under%20Construction/comingsoon.png" alt="Under construction" width="304" height="228" ></image></center>
 
  
 </body>
